# krm3

./: .actrc.example  .bumpversion.cfg  .dockerignore  .env.example  .envrc.example  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .test.env.example  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  KTabular.drawio  KTabular.ods  LICENSE.md  MAINTAINER.md  MANIFEST.in  Makefile  README.md  RELEASE.md  immagini.py  immagini2.py  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/: file-filters.yml
.github/actions/generate-git-info/: action.yml
.github/hooks/: compilemessages.sh
.github/workflows/: bandit.yml  deploy.yml  docs.yml  prod-deploy.yml  test.yml
devops/azure/: azure-build.yml  azure-release.yml  azure-test.yml
docker/: Dockerfile  Dockerfile.base  Makefile  README-NGINX.md  README-PRIVATE-MEDIA.md  README.md  docker-compose-example.yml  finalDockerfile  gen-certs.sh
docker/etc/: circus.conf  entrypoint.sh  nginx.conf
docker/etc/sites-available/: krm3.conf.template
docs/: .pages  index.md
docs/examples/: .pages  blocks.md  tagged.md
docs/glossary/: .pages  index.md
docs/glossary/terms/: .pages  BankOfHours.md  BaseCurrency.md  ClosedEntry.md  Contract.md  DayEntry.md  Expense.md  ExpenseCategory.md  ExtraHoliday.md  Mission.md  OpenEntry.md  PaymentType.md  Reimbursement.md  Resource.md  TaskEntry.md  TimeEntry.md  TimesheetSubmission.md
docs/guides/: .pages
docs/guides/developer/: .pages  bump.md  commit.md  index.md
docs/guides/developers/: .pages  bump.md  commit.md  index.md  overtime.md  pipeline.md
docs/guides/user/: .pages  add.md  availability.md  bank_hours.md  entry.md  index.md  remove.md  remove_from_day.md  submit.md  timesheet_overview.md
docs/guides/users/: .pages  availability.md  index.md  key-concepts.md  remove_from_day.md  submit.md  timesheet_overview.md  timesheet_report.md
docs/missions/: index.md
docs/wiki/: NewReleaseWorkflowProposal.md  Overview.md  ReleaseWorkflow.md
docs/wiki/domains/: os4d.org.md
src/krm3/: __init__.py  admin.py  daterange.py  models.py  patching.py  releases.json  sentry.py
src/krm3/accounting/: admin.py  apps.py  models.py
src/krm3/admin/: __init__.py  adm.py
src/krm3/api/: urls.py
src/krm3/config/: __init__.py  asgi.py  context_processors.py  environ.py  pipeline.py  security.py  sentry.py  settings.py  social.py  urls.py  wsgi.py
src/krm3/core/: admin.py  apps.py  contracts.py  exceptions.py  fields.py  flags.py  forms.py  impexp.py  media_urls.py  media_views.py  models.py  pyd_models.py  serializers.py  storage.py  views.py  widgets.py
src/krm3/currencies/: admin.py  apps.py  client.py  forms.py  impexp.py
src/krm3/documents/: admin.py  forms.py
src/krm3/events/: __init__.py  backends.py  dispatcher.py
src/krm3/fe/: static  urls.py  views.py
src/krm3/middlewares/: language_selection.py
src/krm3/migrations/: 0001_initial.py  0002_auto_20230228_0857.py
src/krm3/missions/: actions.py  admin.py  apps.py  exceptions.py  facilities.py  forms.py  media.py  models.py  session.py  tables.py  transform.py  urls.py  utilities.py  views.py
src/krm3/models/: example.py
src/krm3/projects/: admin.py  forms.py
src/krm3/reports/: availability.py  generator.py
src/krm3/styles/: buttons.py
src/krm3/theme/: apps.py
src/krm3/timesheet/: admin.py  apps.py  availability_report.py  dto.py  entities.py  forms.py  models.py  operations.py  report.py  rules.py  task_report.py  utils.py
src/krm3/trasferte/: apps.py  models.py
src/krm3/types/: krmdates.py
src/krm3/utils/: __init__.py  currencies.py  dates.py  filters.py  i18n.py  models.py  numbers.py  pdf.py  queryset.py  rates.py  reflect.py  schedule.py  sentry.py  serializers.py  sysinfo.py  sysinfo_masker.py  threading.py  tools.py
src/krm3/web/: document_filter.py  report_styles.py  urls.py  views.py
tests/: .coveragerc  conftest.py  factories.py  test_z.py
tests/_extras/: factories.py  testutils.py
tests/_extras/testutils/: date_utils.py  factories.py  mappings.py  permissions.py  selenium.py  test_smartenv.py  utils.py  web.py  yaml.py
tests/api/general/: test_supported_languages_api.py
tests/api/info/: test_supported_languages_api.py
tests/api/models/: test_resource_api.py
tests/api/timesheet/: test_report_viewset.py  test_task_viewset.py  test_timeentries.py  test_timesheet_model_viewset.py
tests/examples/: ReportPresenze (scenari).ods
tests/functional/missions/: test_missions_reimbursement.py
tests/integration/: conftest.py  test3.py  test_admin_panel.py  test_admin_pannel.py  test_bank_hours.py  test_fe_login.py  test_fe_monthweek2.py  test_fe_morethan24h4.py  test_fe_no_data1.py  test_fe_quickadd3.py  test_fe_quickadd32.py  test_fe_timesheet.py  test_final.py  test_gui_auth.py  test_language_change.py  test_navbar_modules.py  test_report.py  test_static_serve.py  test_timesheet.py  test_timesheet_leaves.py
tests/integration/foundations/: test_admin_panel.py  test_gui_auth.py
tests/integration/timesheet/: test_calendar.py  test_day_entries.py  test_fe_calendar.py  test_report.py  test_timesheet.py
tests/unit/: test_user.py
tests/unit/admin/: test_document_admin.py
tests/unit/core/: test_contact.py  test_contract.py  test_contract.py.drawio  test_extra_holiday.py  test_flags.py  test_media_views.py  test_protected_document.py  test_resource.py  test_schedule.py  test_storage.py  test_task.py  test_widgets.py
tests/unit/currencies/: out.yaml  out2.yaml  test_rates.py
tests/unit/events/: test_bitcaster_events.py  test_generic_events.py
tests/unit/middlewares/: test_language_selection.py
tests/unit/missions/: conftest.py  expimp.py  test_expenses.py  test_expimp.py  test_image_upload.py  test_mission_forms.py  test_mission_model.py  test_missions.py  test_reimbursement.py  (+3 more)
tools/dev/: clonedb.sh  drop_test_dbs.sh  fetchdb.sh  initdb.sh  restore_db.sh
tools/http/: .keep  http-client.env.json  jwt-login.http  jwt-refresh.http  jwt-verify.http  resource-get.http  user-get.http
(+322 files in other folders)
