[project]
name = "krm3"
version = "1.9.11"
description = "KRM3"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "K-Tech s.r.l.", email = "info@k-tech.it"}
]
maintainers = [
  {name = "Giovanni Bronzini", email = "g.bronzini@gmail.com"},
]
license-files = ["LICEN[CS]E*"]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django :: 5.2"
]

dependencies = [
    "cryptography>=44.0.2",
    "django>=5.2.6",
    "django-admin-rangefilter>=0.13.2",
    "django-adminfilters>=2.6",
    "django-click>=2.4.1",
    "django-constance>=4.3.2",
    "django-cors-headers>=4.7.0",
    "django-crispy-forms>=2.3",
    "django-debug-toolbar>=5.1.0",
    "django-filter>=25.1",
    "django-mptt-admin>=2.7.2",
    "django-picklefield>=3.3",
    "django-qr-code>=4.1.0",
    "django-regex>=0.5.0",
    "django-tables2>=2.7.5",
    "djangorestframework-camel-case>=1.4.2",
    "djoser>=2.3.1",
    "docutils>=0.21.2",
    "drf-spectacular>=0.28.0",
    "markdown>=3.7",
    "natural-keys>=2.1.1",
    "parametrize>=0.1.1",
    "psycopg[binary,pool]>=3.2.6",
    "pyoxr>=1.6",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "requests>=2.32.3",
    "sentry-sdk[django]==1.45.1",
    "tabulate>=0.9.0",
    "tablib[html,ods,xlsx,yaml]>=3.8.0",
    "djangorestframework>=3.16.0",
    "lock>=2018.3.25.2110",
    "django-sysinfo>=2.7.0",
    "django-adminactions>=2.4",
    "drf-extra-fields>=3.7.0",
    "pillow>=10.4",
    "social-auth-app-django>=5.4.3",
    "djangorestframework-simplejwt>=5.5.0",
    "django-smart-env>=0.1.0",
    "django-tailwind>=4.0.1",
    "django-cotton>=2.1.2",
    "django-admin-extra-buttons>=2.1.1",
    "django-smart-admin[sysinfo]>=3.0",
    "holidays>=0.73",
    "seleniumbase>=4.39.2",
    "django-flags>=5.0.14",
    "django-online-issues>=0.3",
]

[project.optional-dependencies]
sysingo = []

[dependency-groups]
dev = [
    "bumpversion>=0.6.0",
    "detect-secrets>=1.5.0",
    "django-extensions>=3.2.3",
    "django-factory-boy>=1.0.0",
    "django-stubs>=5.1.3",
    "django-tailwind[reload]>=4.0.1",
    "django-webtest>=1.9.13",
    "djangorestframework-stubs>=3.15.3",
    "freezegun>=1.5.2",
    "opencv-python>=4.11.0.86",
    "pdbpp>=0.10.3",
    "pre-commit>=4.2.0",
    "pydocstyle>=6.3.0",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.1.5",
    "pytest-param>=0.1.1",
    "pytest-race>=0.2.0",
    "pytest-seleniumbase>=4.37.10",
    "responses>=0.25.7",
    "tox>=4.26.0",
]
docs = [
    "PyMarkdown>=0.1.4",
    "cairosvg>=2.7.1",
    "markupsafe>=2.1.5",
    "mdx-gh-links>=0.4",
    "mkdocs-autolinks-plugin>=0.7.1",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocs-click>=0.8.1",
    "mkdocs-ezglossary-plugin>=1.6.10",
    "mkdocs-ezlinks-plugin>=0.1.14",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-link-marker>=0.1.3",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-material[imaging]>=9.5.15",
    "mkdocs-simple-hooks>=0.1.5",
    "mkdocstrings[python]>=0.24.1",
    "pymdown-extensions>=10.7.1",
    "mkdocs-embed-external-markdown>=3.0.2",
    "mkdocs-include-markdown-plugin>=6.2.2",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs>=1.5.3",
]
image = [
    "circus>=0.19.0",
    "opencv-python-headless>=4.11.0.86",
]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
extraPaths = ["tests/_extras"]
typeCheckingMode="basic"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
changelog_start_rev = "1.5.32"
version_files = [
    "src/krm3/__init__.py:__version__",
    "docker/Makefile:VERSION"
]
